# kernel_image_processing

./: .gitignore  CMakeLists.txt  DataHandler.h  Header.cpp  Header.h  HeaderHandler.cpp  HeaderHandler.h  ImageHandler.cpp  ImageHandler.h  ImageTemplate.h  KernelImageProcessing.cpp  KernelImageProcessing.h  PGMHandler.cpp  PGMHandler.h  PPMHandler.cpp  PPMHandler.h  PixelGray.cpp  PixelGray.h  PixelRGB.cpp  PixelRGB.h  main.cpp
images/: picture.pgm  poro.ppm
test/: CMakeLists.txt  ExceptionTests.cpp  GrayImageFixture.cpp  KernelImageProcessingFixture.cpp  PixelTests.cpp  RGBImageFixture.cpp  runAllTests.cpp
